<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.malikproject.newsapp.activity.OTPActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_btn"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/david_libre_medium"
        android:text="@string/otp_verification"
        android:textColor="@color/black"
        android:textSize="@dimen/header_fonts_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="354dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:padding="7dp"
        android:text="@string/otp_message"
        android:textSize="@dimen/remain_fonts_size"
        android:fontFamily="@font/david_libre_medium"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/code1"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="1"
            android:gravity="center"
            android:inputType="number|textPersonName"
            android:maxEms="1"
            android:maxLength="1"
            android:textSize="@dimen/remain_fonts_size"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/code2"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="number|textPersonName"
            android:maxLength="1"
            android:textSize="@dimen/remain_fonts_size"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/code3"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="number|textPersonName"
            android:maxLength="1"
            android:textSize="@dimen/remain_fonts_size"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/code4"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="number|textPersonName"
            android:maxLength="1"
            android:textSize="@dimen/remain_fonts_size"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/remain_fonts_size"
        android:fontFamily="@font/architects_daughter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>